<resources>
    <string name="app_name">BullshitBingo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Bullshit Bingo</string>
    <string name="title_browse">Browse</string>
    <string name="title_mycontent">My Content</string>
    <string name="title_search">Search</string>
    <string name="title_mytemplates">My Templates</string>
    <string name="title_mygames">My Games</string>
    <string name="title_user">User</string>
    <string name="call_bingo">CALL BINGO!</string>
    <string name="emptyInputFields">Please fill all input fields!</string>
    <string name="emptyFields">Empty Fields</string>
    <string name="ok">Ok!</string>
    <string name="cancel">Cancel</string>
    <string name="tryAgain">Try Again!</string>
    <string name="templateNotCreated">Template has not been created!</string>
    <string name="bingo">BINGO!</string>
    <string name="question_start_game">Do you want to play a game with this template?</string>
    <string name="play">Play</string>
    <string name="create_local_copy">Create local copy!</string>
    <string name="created_by">Created by</string>
    <string name="make_public">Make Public</string>
    <string name="make_public_question">Do you want to upload your template?</string>
    <string name="success">Successful</string>
    <string name="error">Error</string>
    <string name="success_public">Template is now available online!</string>
    <string name="error_public">Template upload was not successful!</string>
    <string name="edit_description">Edit description</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="example_name">No name</string>
    <string name="example_mail">mail@mail.com</string>
    <string name="menu_user_change_name">Change username</string>
    <string name="menu_user_logout">Logout</string>
    <string name="menu_user_add_subscriber">Add subscriber</string>
    <string name="title_change_username">Please type in your new username</string>
    <string name="ask_logout">Do you really want to log out?</string>
    <string name="user_not_found">User not found</string>
    <string name="subscribes_to">You subscribe to:</string>
    <string name="copy_created">Copy of Template created successfully. Check "My Templates" to start a game!</string>
</resources>
