<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/template_detail_text_creator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/play"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/template_detail_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/template_detail_text_creator"
        android:text="@string/play"/>

    <Button
        android:id="@+id/template_detail_button_edit_description"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/template_detail_text_description"
        android:text="@string/edit_description" />


    <GridView
        android:id="@+id/template_detail_grid_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:numColumns="4"
        android:stretchMode="spacingWidthUniform"
        android:verticalSpacing="3dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/template_detail_button_make_public"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="false"
            android:layout_weight="0.5"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/make_public"
            />

        <Button
            android:id="@+id/template_detail_button_play"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/play"
            />
    </LinearLayout>

</RelativeLayout>